[tool.poetry]
name = "openleveldb"
version = "0.1.0"
description = ""
authors = ["Luca Moschella <luca.moschella94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.5"
plyvel = "^1.1.0"
orjson = "^2.1.4"
numpy = "^1.18.1"
tqdm = "^4.41.1"
flask = "^1.1.1"
coverage = "^5.0.3"
requests = "^2.22.0"
streamlit = "^0.53.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
