[tool.poetry]
name = "openleveldb"
version = "0.1.4"
description = ""
authors = ["Luca Moschella <luca.moschella94@gmail.com>"]

license = "MIT"

readme = "README.rst"

repository = "https://github.com/lucmos/openleveldb"
documentation = "https://openleveldb.readthedocs.io/en/latest/index.html#"

keywords = ["leveldb", "multiprocessing"]


[tool.poetry.dependencies]
python = "^3.7.5"
plyvel = "^1.1.0"
numpy = "^1.18.1"
flask = "^1.1.1"
requests = "^2.22.0"
python-dotenv = "^0.10.3"
python-rapidjson = "^0.9.1"
pytest = "^5.4.1"

[tool.poetry.dev-dependencies]
coverage = "^5.0.3"
mock = "^3.0.5"
sphinx = "^2.3.1"
sphinx_rtd_theme = "^0.4.3"
sphinx-autobuild = "^0.7.1"
sphinx-autodoc-typehints = "^1.10.3"
autodoc = "^0.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
